retornando url do pet para uso nas requisições do pet

--- a/Pagina de teste front/html.html
+++ b/Pagina de teste front/html.html
@@ -8,6 +8,6 @@
   
 </head>
 <body>
-  
+  <img src="https://firebasestorage.googleapis.com/v0/b/patinhasdobem-f25f8.appspot.com/o/pets%2F34.jpg?alt=media" alt="">
 </body>
 </html>
